...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/placeOfMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:hint="@string/hintForWrite"
...
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="181dp"
        android:layout_height="77dp"
        android:layout_marginBottom="8dp"
        android:background="@color/purple_500"
        android:onClick="goToAnotherActivity"
        android:text="@string/Send"
...
