...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnotherOne">

    <TextView
        android:id="@+id/displayUserMessage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
...
